--- a/ME/base/so3/soo/me/Makefile
+++ b/ME/base/so3/soo/me/Makefile
@@ -8,6 +8,7 @@ obj-$(CONFIG_SOO_AGENCY) += agency/
 obj-$(CONFIG_SOO_NET) += net/
 obj-$(CONFIG_SOO_LEDCTRL) += ledctrl/
 obj-$(CONFIG_SOO_WAGOLED) += wagoled/
+obj-$(CONFIG_SOO_SWITCH) += switch/
 
 
 
