--- a/ME/base/so3/dts/switch.dts
+++ b/ME/base/so3/dts/switch.dts
@@ -25,19 +25,18 @@
 	domain-size =  <0x1000000>;
 	
 	/* SPID on 128-bit encoding */
-	spid = /bits/ 64 <0x0020000000000001>;
+	spid = /bits/ 64 <0x0020000000000004>;
 
 	/* SPAD capabilities on 64-bit encoding */
 	spadcaps = /bits/ 64 <0x0000000000000000>;
 		
 	/* Name of this ME */
-	me_name = "SOO.blind";
+	me_name = "SOO.switch";
 		
 	/* Short description */
 	me_shortdesc =
 			
-"SOO.blind is used to drive any blind (up/down position) and can manage \
-various parameters from other ME like SOO.outdoor to get smarter.";
+"SOO.switch is used to transport switch events through the SOO environnment";
 
 	frontends {
 		
@@ -46,13 +45,13 @@ various parameters from other ME like SOO.outdoor to get smarter.";
 			status = "ok";
 		};
 
-		// venocean {
-		// 	status = "disabled";
-		// };
-
-		vknx {
+		venocean {
 			status = "ok";
 		};
+
+		// vknx {
+		// 	status = "disabled";
+		// };
 	};
 	
 };
