--- a/ME/base/so3/soo/me/Kconfig
+++ b/ME/base/so3/soo/me/Kconfig
@@ -46,7 +46,12 @@ choice
 	config SOO_WAGOLED
 		bool "SOO.wagoled Mobile Entity"
 		help
-			TODO		
+			TODO
+
+	config SOO_SWITCH
+		bool "SOO.switch Mobile Entity"
+		help
+			SOO.switch is a ME capable of ...
 		
 endchoice
 
