--- a/ME/base/so3/dts/switch_knx.dts
+++ b/ME/base/so3/dts/switch_knx.dts
@@ -45,13 +45,9 @@
 			status = "ok";
 		};
 
-		venocean {
+		vknx {
 			status = "ok";
 		};
-
-		// vknx {
-		// 	status = "disabled";
-		// };
 	};
 	
 };
