--- a/agency/linux/arch/arm/configs/rpi4_wago_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_wago_defconfig
@@ -999,19 +999,11 @@ CONFIG_BT_HCIBTUSB_BCM=y
 CONFIG_BT_HCIBTUSB_RTL=y
 # CONFIG_BT_HCIBTSDIO is not set
 CONFIG_BT_HCIUART=y
-CONFIG_BT_HCIUART_SERDEV=y
 CONFIG_BT_HCIUART_H4=y
-# CONFIG_BT_HCIUART_NOKIA is not set
 # CONFIG_BT_HCIUART_BCSP is not set
 # CONFIG_BT_HCIUART_ATH3K is not set
-# CONFIG_BT_HCIUART_LL is not set
-# CONFIG_BT_HCIUART_3WIRE is not set
 # CONFIG_BT_HCIUART_INTEL is not set
-CONFIG_BT_HCIUART_BCM=y
-# CONFIG_BT_HCIUART_RTL is not set
-# CONFIG_BT_HCIUART_QCA is not set
 # CONFIG_BT_HCIUART_AG6XX is not set
-# CONFIG_BT_HCIUART_MRVL is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
@@ -1019,7 +1011,6 @@ CONFIG_BT_HCIUART_BCM=y
 # CONFIG_BT_MRVL is not set
 # CONFIG_BT_ATH3K is not set
 # CONFIG_BT_MTKSDIO is not set
-# CONFIG_BT_MTKUART is not set
 # end of Bluetooth device drivers
 
 # CONFIG_AF_RXRPC is not set
@@ -1678,8 +1669,7 @@ CONFIG_SERIAL_MCTRL_GPIO=y
 # CONFIG_NULL_TTY is not set
 # CONFIG_TRACE_SINK is not set
 # CONFIG_HVC_DCC is not set
-CONFIG_SERIAL_DEV_BUS=y
-CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
+# CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_VIRTIO_CONSOLE is not set
 # CONFIG_IPMI_HANDLER is not set
@@ -2137,7 +2127,6 @@ CONFIG_MFD_SYSCON=y
 # CONFIG_MFD_ROHM_BD71828 is not set
 # CONFIG_MFD_STPMIC1 is not set
 # CONFIG_MFD_STMFX is not set
-# CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC is not set
 # end of Multifunction device drivers
 
@@ -4411,11 +4400,7 @@ CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VNET_BACKEND is not set
 # CONFIG_VSENSELED_BACKEND is not set
 # CONFIG_VSENSEJ_BACKEND is not set
-# CONFIG_VWAGOLED_BACKEND is not set
-# CONFIG_TCM515 is not set
-# CONFIG_RN2483 is not set
-CONFIG_KBERRY838=y
-CONFIG_VKNX_BACKEND=y
+CONFIG_VWAGOLED_BACKEND=y
 
 #
 # vnet backend config
