--- a/ME/base/so3/dts/Makefile
+++ b/ME/base/so3/dts/Makefile
@@ -16,6 +16,7 @@ dtb-$(CONFIG_SOO_AGENCY) += agency.dtb
 dtb-$(CONFIG_SOO_NET) += net.dtb
 dtb-$(CONFIG_SOO_LEDCTRL) += ledctrl.dtb
 dtb-$(CONFIG_SOO_WAGOLED) += wagoled.dtb
-dtb-$(CONFIG_SOO_SWITCH) += switch.dtb
+dtb-$(CONFIG_SOO_SWITCH_KNX) += switch_knx.dtb
+dtb-$(CONFIG_SOO_SWITCH_ENOCEAN) += switch_enocean.dtb
 
 
