[SOO.switch] Some bug fixes
Signed-off-by: mgi-reds <mattia.gallacchi@heig-vd.ch>

--- a/ME/base/so3/dts/switch_knx.dts
+++ b/ME/base/so3/dts/switch_knx.dts
@@ -31,7 +31,7 @@
 	spadcaps = /bits/ 64 <0x0000000000000000>;
 		
 	/* Name of this ME */
-	me_name = "SOO.switch";
+	me_name = "SOO.switch KNX";
 		
 	/* Short description */
 	me_shortdesc =
