--- a/agency/linux/arch/arm64/configs/rpi4_64_defconfig
+++ b/agency/linux/arch/arm64/configs/rpi4_64_defconfig
@@ -116,6 +116,7 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 #
 # Scheduler features
 #
+# CONFIG_UCLAMP_TASK is not set
 # end of Scheduler features
 
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
@@ -124,7 +125,10 @@ CONFIG_ARCH_SUPPORTS_INT128=y
 CONFIG_CGROUPS=y
 # CONFIG_MEMCG is not set
 # CONFIG_BLK_CGROUP is not set
-# CONFIG_CGROUP_SCHED is not set
+CONFIG_CGROUP_SCHED=y
+CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_CFS_BANDWIDTH is not set
+# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
 CONFIG_CGROUP_FREEZER=y
@@ -136,6 +140,7 @@ CONFIG_CGROUP_CPUACCT=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
+CONFIG_TIME_NS=y
 CONFIG_IPC_NS=y
 CONFIG_USER_NS=y
 CONFIG_PID_NS=y
@@ -196,7 +201,6 @@ CONFIG_RSEQ=y
 # CONFIG_DEBUG_RSEQ is not set
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
-CONFIG_PERF_USE_VMALLOC=y
 # CONFIG_PC104 is not set
 
 #
@@ -675,7 +679,18 @@ CONFIG_PARTITION_ADVANCED=y
 # CONFIG_ATARI_PARTITION is not set
 CONFIG_MAC_PARTITION=y
 CONFIG_MSDOS_PARTITION=y
+# CONFIG_BSD_DISKLABEL is not set
+# CONFIG_MINIX_SUBPARTITION is not set
+# CONFIG_SOLARIS_X86_PARTITION is not set
+# CONFIG_UNIXWARE_DISKLABEL is not set
+# CONFIG_LDM_PARTITION is not set
+# CONFIG_SGI_PARTITION is not set
+# CONFIG_ULTRIX_PARTITION is not set
+# CONFIG_SUN_PARTITION is not set
+# CONFIG_KARMA_PARTITION is not set
 CONFIG_EFI_PARTITION=y
+# CONFIG_SYSV68_PARTITION is not set
+# CONFIG_CMDLINE_PARTITION is not set
 # end of Partition Types
 
 CONFIG_BLOCK_COMPAT=y
@@ -732,6 +747,8 @@ CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
 # Sizes and static limits
 #
 # end of Sizes and static limits
+
+CONFIG_FREEZER=y
 
 #
 # Executable file formats
@@ -796,6 +813,7 @@ CONFIG_ARCH_HAS_PTE_SPECIAL=y
 # end of Memory Management options
 
 CONFIG_NET=y
+CONFIG_COMPAT_NETLINK_MESSAGES=y
 CONFIG_NET_INGRESS=y
 CONFIG_SKB_EXTENSIONS=y
 
@@ -1006,7 +1024,6 @@ CONFIG_BT_HCIBTUSB_RTL=y
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_SERDEV=y
 CONFIG_BT_HCIUART_H4=y
-# CONFIG_BT_HCIUART_NOKIA is not set
 # CONFIG_BT_HCIUART_BCSP is not set
 # CONFIG_BT_HCIUART_ATH3K is not set
 # CONFIG_BT_HCIUART_LL is not set
@@ -1658,6 +1675,8 @@ CONFIG_WLAN=y
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
 # CONFIG_WLAN_VENDOR_ATH is not set
 CONFIG_WLAN_VENDOR_ATMEL=y
+# CONFIG_ATMEL is not set
+# CONFIG_AT76C50X_USB is not set
 CONFIG_WLAN_VENDOR_BROADCOM=y
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
@@ -1667,6 +1686,7 @@ CONFIG_BRCMFMAC=y
 CONFIG_BRCMFMAC_PROTO_BCDC=y
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
+# CONFIG_BRCMFMAC_PCIE is not set
 CONFIG_BRCM_TRACING=y
 # CONFIG_BRCMDBG is not set
 # CONFIG_WLAN_VENDOR_CISCO is not set
@@ -1675,13 +1695,32 @@ CONFIG_BRCM_TRACING=y
 # CONFIG_WLAN_VENDOR_MARVELL is not set
 # CONFIG_WLAN_VENDOR_MEDIATEK is not set
 CONFIG_WLAN_VENDOR_MICROCHIP=y
+# CONFIG_WILC1000_SDIO is not set
+# CONFIG_WILC1000_SPI is not set
 # CONFIG_WLAN_VENDOR_RALINK is not set
 CONFIG_WLAN_VENDOR_REALTEK=y
+# CONFIG_RTL8180 is not set
+# CONFIG_RTL8187 is not set
+CONFIG_RTL_CARDS=y
+# CONFIG_RTL8192CE is not set
+# CONFIG_RTL8192SE is not set
+# CONFIG_RTL8192DE is not set
+# CONFIG_RTL8723AE is not set
+# CONFIG_RTL8723BE is not set
+# CONFIG_RTL8188EE is not set
+# CONFIG_RTL8192EE is not set
+# CONFIG_RTL8821AE is not set
+# CONFIG_RTL8192CU is not set
+# CONFIG_RTL8XXXU is not set
+# CONFIG_RTW88 is not set
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
+# CONFIG_MAC80211_HWSIM is not set
+# CONFIG_USB_NET_RNDIS_WLAN is not set
+# CONFIG_VIRT_WIFI is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -2533,11 +2572,13 @@ CONFIG_DVB_DYNAMIC_MINORS=y
 # Media drivers
 #
 # CONFIG_MEDIA_USB_SUPPORT is not set
+# CONFIG_MEDIA_PCI_SUPPORT is not set
 CONFIG_RADIO_ADAPTERS=y
 # CONFIG_RADIO_SI470X is not set
 # CONFIG_RADIO_SI4713 is not set
 # CONFIG_USB_MR800 is not set
 # CONFIG_USB_DSBR is not set
+# CONFIG_RADIO_MAXIRADIO is not set
 # CONFIG_RADIO_SHARK is not set
 # CONFIG_RADIO_SHARK2 is not set
 # CONFIG_USB_KEENE is not set
@@ -3190,6 +3231,8 @@ CONFIG_HDMI=y
 # Console display driver support
 #
 CONFIG_DUMMY_CONSOLE=y
+CONFIG_DUMMY_CONSOLE_COLUMNS=80
+CONFIG_DUMMY_CONSOLE_ROWS=25
 # CONFIG_FRAMEBUFFER_CONSOLE is not set
 # end of Console display driver support
 
@@ -3230,6 +3273,7 @@ CONFIG_HID_GENERIC=y
 # CONFIG_HID_COUGAR is not set
 # CONFIG_HID_MACALLY is not set
 # CONFIG_HID_CMEDIA is not set
+# CONFIG_HID_CP2112 is not set
 # CONFIG_HID_CREATIVE_SB0540 is not set
 # CONFIG_HID_CYPRESS is not set
 # CONFIG_HID_DRAGONRISE is not set
@@ -3503,6 +3547,7 @@ CONFIG_USB_BDC_UDC=y
 # CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
+# CONFIG_USB_G_WEBCAM is not set
 # CONFIG_USB_RAW_GADGET is not set
 # end of USB Gadget precomposed configurations
 
@@ -3704,10 +3749,16 @@ CONFIG_VHOST_MENU=y
 
 # CONFIG_GREYBUS is not set
 CONFIG_STAGING=y
+# CONFIG_PRISM2_USB is not set
 # CONFIG_COMEDI is not set
 # CONFIG_RTL8192U is not set
 # CONFIG_RTLLIB is not set
+# CONFIG_RTL8723BS is not set
+# CONFIG_R8712U is not set
+# CONFIG_R8188EU is not set
 # CONFIG_RTS5208 is not set
+# CONFIG_VT6655 is not set
+# CONFIG_VT6656 is not set
 # CONFIG_FB_SM750 is not set
 # CONFIG_STAGING_MEDIA is not set
 
@@ -3724,6 +3775,7 @@ CONFIG_STAGING=y
 # CONFIG_KS7010 is not set
 CONFIG_BCM_VIDEOCORE=y
 CONFIG_BCM2835_VCHIQ=y
+# CONFIG_VIDEO_BCM2835 is not set
 # CONFIG_BCM2835_VCHIQ_MMAL is not set
 # CONFIG_PI433 is not set
 
@@ -3736,6 +3788,7 @@ CONFIG_BCM2835_VCHIQ=y
 # CONFIG_XIL_AXIS_FIFO is not set
 # CONFIG_FIELDBUS_DEV is not set
 # CONFIG_QLGE is not set
+# CONFIG_WFX is not set
 # CONFIG_XILINX_FCLK is not set
 # CONFIG_XLNX_TSMUX is not set
 # CONFIG_XROE_FRAMER is not set
@@ -4077,6 +4130,9 @@ CONFIG_FAT_DEFAULT_IOCHARSET="ascii"
 # Pseudo filesystems
 #
 CONFIG_PROC_FS=y
+# CONFIG_PROC_KCORE is not set
+CONFIG_PROC_VMCORE=y
+# CONFIG_PROC_VMCORE_DEVICE_DUMP is not set
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
 # CONFIG_PROC_CHILDREN is not set
@@ -4356,6 +4412,7 @@ CONFIG_CRYPTO_HASH_INFO=y
 # Crypto library routines
 #
 CONFIG_CRYPTO_LIB_AES=y
+CONFIG_CRYPTO_LIB_ARC4=y
 # CONFIG_CRYPTO_LIB_BLAKE2S is not set
 # CONFIG_CRYPTO_LIB_CHACHA is not set
 # CONFIG_CRYPTO_LIB_CURVE25519 is not set
@@ -4380,6 +4437,8 @@ CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_X509_CERTIFICATE_PARSER=y
 # CONFIG_PKCS8_PRIVATE_KEY_PARSER is not set
 CONFIG_PKCS7_MESSAGE_PARSER=y
+# CONFIG_PKCS7_TEST_KEY is not set
+# CONFIG_SIGNED_PE_FILE_VERIFICATION is not set
 
 #
 # Certificates for signature checking
@@ -4427,9 +4486,7 @@ CONFIG_CRC32_SLICEBY8=y
 CONFIG_LIBCRC32C=y
 # CONFIG_CRC8 is not set
 CONFIG_XXHASH=y
-CONFIG_AUDIT_GENERIC=y
 CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
-CONFIG_AUDIT_COMPAT_GENERIC=y
 # CONFIG_RANDOM32_SELFTEST is not set
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
@@ -4500,10 +4557,6 @@ CONFIG_OID_REGISTRY=y
 CONFIG_HAVE_GENERIC_VDSO=y
 CONFIG_GENERIC_GETTIMEOFDAY=y
 CONFIG_GENERIC_VDSO_TIME_NS=y
-CONFIG_FONT_SUPPORT=y
-# CONFIG_FONTS is not set
-CONFIG_FONT_8x8=y
-CONFIG_FONT_8x16=y
 CONFIG_SG_POOL=y
 CONFIG_ARCH_STACKWALK=y
 CONFIG_SBITMAP=y
@@ -4814,6 +4867,10 @@ CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VNET_BACKEND is not set
 CONFIG_VSENSELED_BACKEND=y
 CONFIG_VSENSEJ_BACKEND=y
+CONFIG_VWAGOLED_BACKEND=y
+CONFIG_TCM515=y
+CONFIG_VENOCEAN_BACKEND=y
+CONFIG_RN2483=y
 
 #
 # vnet backend config
