--- a/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
@@ -108,6 +108,14 @@
 			in1_ph-gpios = <&gpio 17 GPIO_ACTIVE_HIGH>;
 		};
 
+		vwagoled {
+			status = "ok";
+		};
+
+		venocean {
+			status = "ok";
+		};
+
 	};
 
 };
@@ -383,6 +391,30 @@
 	status = "okay";
 };
 
+/* UART5 used for LoRa communication on soo.mp V1 */
+&uart3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart3_gpio4>;
+	status = "okay";
+
+	lora {
+		compatible = "lora,rn2483";
+		current-speed = <57600>;
+	};
+};
+
+/* UART5 used for enOcean communication on soo.mp V1 */
+&uart5 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart5_gpio12>;
+	status = "okay";
+
+	enocean {
+		compatible = "enocean,tcm515";
+		current-speed = <57600>;
+	};
+
+};	
 
 &spi1 {
 	status = "okay";
