--- a/agency/linux/arch/arm64/configs/virt64_defconfig
+++ b/agency/linux/arch/arm64/configs/virt64_defconfig
@@ -4702,13 +4702,17 @@ CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
-# CONFIG_VWEATHER_BACKEND is not set
-# CONFIG_VUIHANDLER_BACKEND is not set
+CONFIG_VWEATHER_BACKEND=y
+CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # CONFIG_VNET_BACKEND is not set
-# CONFIG_VSENSELED_BACKEND is not set
-# CONFIG_VSENSEJ_BACKEND is not set
+CONFIG_VSENSELED_BACKEND=y
+CONFIG_VSENSEJ_BACKEND=y
+CONFIG_VWAGOLED_BACKEND=y
+CONFIG_TCM515=y
+CONFIG_VENOCEAN_BACKEND=y
+CONFIG_RN2483=y
 
 #
 # vnet backend config
