--- a/agency/linux/arch/arm64/configs/rpi4_64_defconfig
+++ b/agency/linux/arch/arm64/configs/rpi4_64_defconfig
@@ -4860,7 +4860,7 @@ CONFIG_SOOLINK_PLUGIN_BLUETOOTH=y
 CONFIG_VUART_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
-CONFIG_VWEATHER_BACKEND=y
+# CONFIG_VWEATHER_BACKEND is not set
 CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
@@ -4868,9 +4868,6 @@ CONFIG_VUIHANDLER_BACKEND=y
 CONFIG_VSENSELED_BACKEND=y
 CONFIG_VSENSEJ_BACKEND=y
 CONFIG_VWAGOLED_BACKEND=y
-CONFIG_TCM515=y
-CONFIG_VENOCEAN_BACKEND=y
-CONFIG_RN2483=y
 
 #
 # vnet backend config
