Enabled vsensej/vsenseled in dts (agency)

--- a/agency/linux/arch/arm64/boot/dts/arm/virt64.dts
+++ b/agency/linux/arch/arm64/boot/dts/arm/virt64.dts
@@ -409,11 +409,15 @@
 		vuart {
 			status = "ok";
 		};
-	};
-	
-	frontends {	
-		vuart {
+		
+		vsensej {
 			status = "ok";
 		};
+
+		vsenseled {
+			status = "ok";
+		};
+		
 	};
+
 };
