Aligned venocean, vknx, SOO.blind and SOO.switch

--- a/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
@@ -82,7 +82,7 @@
 	/* Backends */
 	backends {
 		vuart {
-		status = "ok";
+			status = "ok";
 		};
 			
 		vuihandler {
@@ -113,6 +113,10 @@
 		};
 
 		venocean {
+			status = "ok";
+		};
+
+		vknx {
 			status = "ok";
 		};
 
