--- a/agency/linux/arch/arm64/boot/dts/soo.dtsi
+++ b/agency/linux/arch/arm64/boot/dts/soo.dtsi
@@ -53,7 +53,11 @@
 				compatible = "venocean,backend";
 				status = "disabled";
 			};
-
+			
+			vknx {
+				compatible = "vknx,backend";
+				status = "disabled";
+			};
 		};
 	};
 	
