--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -102,6 +102,22 @@
 				status = "disabled";
 			};
 
+			vtemp {
+            	compatible = "vtemp,frontend";
+            	status = "disabled";
+        	};
+            
+            vvalve {
+            	compatible = "vvalve,frontend";
+            	status = "disabled";
+        	};
+            
+            vdogablind {
+            	compatible = "vdogablind,frontend";
+            	status = "disabled";
+        	};
+
+
 			vwagoled {
 				compatible = "vwagoled,frontend";
 				status = "disabled";
@@ -111,6 +127,12 @@
 				compatible = "venocean,frontend";
 				status = "disabled";
 			};
+
+			vknxblind {
+            	compatible = "vknxblind,frontend";
+            	status = "disabled";
+        	};
+
 		};
 
 	};
