--- a/ME/base/so3/soo/drivers/Kconfig
+++ b/ME/base/so3/soo/drivers/Kconfig
@@ -42,5 +42,12 @@ config VENOCEAN_FRONTEND
 config VWAGOLED_FRONTEND
     bool "Wagoled frontend"
 
+config VVALVE_FRONTEND
+	bool "vValve frontend for the SOO.Heat valve (Electrovanne)"
+
+config VDOGABLIND_FRONTEND
+	bool "vDogaBlind frontend for the SOO.Blind (Doga Blind motor)"
+
+
 endmenu
 
