--- a/agency/linux/arch/arm64/configs/virt64_defconfig
+++ b/agency/linux/arch/arm64/configs/virt64_defconfig
@@ -4702,7 +4702,7 @@ CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
-CONFIG_VWEATHER_BACKEND=y
+# CONFIG_VWEATHER_BACKEND is not set
 CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
@@ -4713,6 +4713,7 @@ CONFIG_VWAGOLED_BACKEND=y
 CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
 CONFIG_RN2483=y
+# CONFIG_KBERRY838 is not set
 
 #
 # vnet backend config
