--- a/u-boot/drivers/mmc/Kconfig
+++ b/u-boot/drivers/mmc/Kconfig
@@ -4,6 +4,7 @@ config MMC
 	bool "MMC/SD/SDIO card support"
 	default ARM || PPC || SANDBOX
 	select HAVE_BLOCK_DEVICE
+# SOO.tech
 	#select DM_MMC if DM
 	help
 	  This selects MultiMediaCard, Secure Digital and Secure
