WiP: Alignment with branch 62

--- a/agency/linux/arch/arm/configs/rpi4_knx_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_knx_defconfig
@@ -4404,16 +4404,15 @@ CONFIG_VDUMMY_BACKEND=y
 CONFIG_VUART_BACKEND=y
 # CONFIG_VINPUT_BACKEND is not set
 # CONFIG_VDOGA12V6NM_BACKEND is not set
-CONFIG_VWEATHER_BACKEND=y
+# CONFIG_VWEATHER_BACKEND is not set
 CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # CONFIG_VNET_BACKEND is not set
-CONFIG_VSENSELED_BACKEND=y
-CONFIG_VSENSEJ_BACKEND=y
-CONFIG_VWAGOLED_BACKEND=y
-CONFIG_TCM515=y
-CONFIG_VENOCEAN_BACKEND=y
+# CONFIG_VSENSELED_BACKEND is not set
+# CONFIG_VSENSEJ_BACKEND is not set
+# CONFIG_VWAGOLED_BACKEND is not set
+# CONFIG_TCM515 is not set
 # CONFIG_RN2483 is not set
 CONFIG_KBERRY838=y
 CONFIG_VKNX_BACKEND=y
