--- a/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm/boot/dts/bcm2711-rpi-4-b.dts
@@ -117,6 +117,10 @@
 			status = "ok";
 		};
 
+		vknx {
+			status = "ok";
+		};
+
 	};
 
 };
@@ -395,10 +399,17 @@
 	pinctrl-0 = <&uart3_gpio4>;
 	status = "okay";
 
+#if 0
 	lora {
 		compatible = "lora,rn2483";
 		current-speed = <57600>;
 	};
+#else	
+	knx {
+		compatible = "knx,kberry838";
+		current-speed = <19200>;
+	};
+#endif
 };
 
 /* UART5 used for enOcean communication on soo.mp V1 */
@@ -406,12 +417,17 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart5_gpio12>;
 	status = "okay";
-
+#if 1
 	enocean {
 		compatible = "enocean,tcm515";
 		current-speed = <57600>;
 	};
-
+#else
+	knx {
+		compatible = "knx,kberry838";
+		current-speed = <19200>;
+	};
+#endif
 };	
 
 &spi1 {
