[BT SERDEV] Solved issue with bt and serdev.
Signed-off-by: mattia <mattia@mgi-laptop.einet.ad.eivd.ch>

--- a/agency/linux/arch/arm64/configs/rpi4_64_defconfig
+++ b/agency/linux/arch/arm64/configs/rpi4_64_defconfig
@@ -1030,6 +1030,7 @@ CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIUART_3WIRE is not set
 # CONFIG_BT_HCIUART_INTEL is not set
 CONFIG_BT_HCIUART_BCM=y
+# CONFIG_BT_HCIUART_RTL is not set
 # CONFIG_BT_HCIUART_QCA is not set
 # CONFIG_BT_HCIUART_AG6XX is not set
 # CONFIG_BT_HCIUART_MRVL is not set
@@ -1915,7 +1916,7 @@ CONFIG_SERIAL_MCTRL_GPIO=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_HVC_DCC is not set
 CONFIG_SERIAL_DEV_BUS=y
-# CONFIG_SERIAL_DEV_CTRL_TTYPORT is not set
+CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_VIRTIO_CONSOLE is not set
 # CONFIG_IPMI_HANDLER is not set
@@ -4868,6 +4869,11 @@ CONFIG_VUIHANDLER_BACKEND=y
 CONFIG_VSENSELED_BACKEND=y
 CONFIG_VSENSEJ_BACKEND=y
 CONFIG_VWAGOLED_BACKEND=y
+CONFIG_TCM515=y
+CONFIG_VENOCEAN_BACKEND=y
+CONFIG_RN2483=y
+CONFIG_KBERRY838=y
+CONFIG_VKNX_BACKEND=y
 
 #
 # vnet backend config
