--- a/ME/base/so3/configs/wagoled_64_defconfig
+++ b/ME/base/so3/configs/wagoled_64_defconfig
@@ -15,7 +15,6 @@ CONFIG_KERNEL_VADDR=0xffff800000000000
 # end of Platform
 
 CONFIG_THREAD_ENV=y
-# CONFIG_PROC_ENV is not set
 
 #
 # SO3 Scheduling configuration
@@ -34,6 +33,7 @@ CONFIG_UART=y
 # CONFIG_FB is not set
 # CONFIG_INPUT is not set
 # CONFIG_DW_APB_UART is not set
+# CONFIG_NS16550 is not set
 CONFIG_SO3VIRT_SERIAL=y
 CONFIG_UART_LL_PADDR=0x09000000
 # CONFIG_MMC is not set
@@ -41,6 +41,7 @@ CONFIG_UART_LL_PADDR=0x09000000
 # CONFIG_ARM_TIMER is not set
 # CONFIG_GIC is not set
 CONFIG_VIRQ=y
+# CONFIG_SO3VIRT_INPUT is not set
 # end of Drivers
 
 #
@@ -73,7 +74,10 @@ CONFIG_ROOTFS_NONE=y
 # CONFIG_SOO_AGENCY is not set
 # CONFIG_SOO_NET is not set
 # CONFIG_SOO_LEDCTRL is not set
+# CONFIG_SOO_CHAT is not set
 CONFIG_SOO_WAGOLED=y
+# CONFIG_SOO_SWITCH_KNX is not set
+# CONFIG_SOO_SWITCH_ENOCEAN is not set
 
 #
 # SOO Mobile Entity frontend drivers
@@ -84,7 +88,7 @@ CONFIG_VUART_FRONTEND=y
 # CONFIG_VINPUT_FRONTEND is not set
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
 # CONFIG_VWEATHER_FRONTEND is not set
-# CONFIG_VUIHANDLER_FRONTEND is not set
+CONFIG_VUIHANDLER_FRONTEND=y
 # CONFIG_VNET_FRONTEND is not set
 
 #
@@ -96,6 +100,7 @@ CONFIG_VUART_FRONTEND=y
 # CONFIG_VSENSEJ_FRONTEND is not set
 CONFIG_VENOCEAN_FRONTEND=y
 CONFIG_VWAGOLED_FRONTEND=y
+# CONFIG_VKNX_FRONTEND is not set
 # end of SOO Mobile Entity frontend drivers
 # end of SOO Mobile Entity - Smart Object Oriented subsystem
 
