[wagoled]: Fix agency and ME wagoled defconfig

--- a/ME/base/so3/configs/wagoled_64_defconfig
+++ b/ME/base/so3/configs/wagoled_64_defconfig
@@ -98,7 +98,7 @@ CONFIG_VUIHANDLER_FRONTEND=y
 
 # CONFIG_VSENSELED_FRONTEND is not set
 # CONFIG_VSENSEJ_FRONTEND is not set
-CONFIG_VENOCEAN_FRONTEND=y
+# CONFIG_VENOCEAN_FRONTEND is not set
 CONFIG_VWAGOLED_FRONTEND=y
 # CONFIG_VKNX_FRONTEND is not set
 # end of SOO Mobile Entity frontend drivers
