--- a/ME/base/so3/configs/outdoor_64_defconfig
+++ b/ME/base/so3/configs/outdoor_64_defconfig
@@ -74,6 +74,11 @@ CONFIG_ROOTFS_NONE=y
 CONFIG_SOO_OUTDOOR=y
 # CONFIG_SOO_AGENCY is not set
 # CONFIG_SOO_NET is not set
+# CONFIG_SOO_LEDCTRL is not set
+# CONFIG_SOO_CHAT is not set
+# CONFIG_SOO_WAGOLED is not set
+# CONFIG_SOO_SWITCH_KNX is not set
+# CONFIG_SOO_SWITCH_ENOCEAN is not set
 
 #
 # SOO Mobile Entity frontend drivers
@@ -83,8 +88,20 @@ CONFIG_VUART_FRONTEND=y
 # CONFIG_VFB_FRONTEND is not set
 # CONFIG_VINPUT_FRONTEND is not set
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
-CONFIG_VWEATHER_FRONTEND=y
+# CONFIG_VWEATHER_FRONTEND is not set
 CONFIG_VUIHANDLER_FRONTEND=y
+# CONFIG_VNET_FRONTEND is not set
+
+#
+# vnet frontend
+#
+# end of vnet frontend
+
+# CONFIG_VSENSELED_FRONTEND is not set
+# CONFIG_VSENSEJ_FRONTEND is not set
+CONFIG_VENOCEAN_FRONTEND=y
+# CONFIG_VWAGOLED_FRONTEND is not set
+# CONFIG_VKNX_FRONTEND is not set
 # end of SOO Mobile Entity frontend drivers
 # end of SOO Mobile Entity - Smart Object Oriented subsystem
 
