--- a/ME/base/so3/configs/heat_64_defconfig
+++ b/ME/base/so3/configs/heat_64_defconfig
@@ -41,6 +41,8 @@ CONFIG_UART_LL_PADDR=0x09000000
 # CONFIG_ARM_TIMER is not set
 # CONFIG_GIC is not set
 CONFIG_VIRQ=y
+# CONFIG_SO3VIRT_FB is not set
+# CONFIG_SO3VIRT_INPUT is not set
 # end of Drivers
 
 #
@@ -67,27 +69,28 @@ CONFIG_ROOTFS_NONE=y
 #
 # SOO Mobile Entity - Smart Object Oriented subsystem
 #
-CONFIG_SOO_HEAT=y
 # CONFIG_SOO_REFSO3 is not set
 # CONFIG_SOO_BLIND is not set
 # CONFIG_SOO_OUTDOOR is not set
 # CONFIG_SOO_AGENCY is not set
 # CONFIG_SOO_NET is not set
+# CONFIG_SOO_LEDCTRL is not set
+# CONFIG_SOO_CHAT is not set
+# CONFIG_SOO_WAGOLED is not set
+# CONFIG_SOO_SWITCH_KNX is not set
+# CONFIG_SOO_SWITCH_ENOCEAN is not set
+CONFIG_SOO_HEAT=y
 
 #
 # SOO Mobile Entity frontend drivers
 #
-# CONFIG_VTEMP_FRONTEND is not set
-CONFIG_VVALVE_FRONTEND=y
-CONFIG_VUART_FRONTEND=y
-# CONFIG_VENOCEANSW_FRONTEND is not set
-# CONFIG_VDOGABLIND_FRONTEND is not set
 # CONFIG_VDUMMY_FRONTEND is not set
+CONFIG_VUART_FRONTEND=y
 # CONFIG_VFB_FRONTEND is not set
 # CONFIG_VINPUT_FRONTEND is not set
 # CONFIG_VDOGA12V6NM_FRONTEND is not set
 # CONFIG_VWEATHER_FRONTEND is not set
-# CONFIG_VUIHANDLER_FRONTEND is not set
+CONFIG_VUIHANDLER_FRONTEND=y
 # CONFIG_VNET_FRONTEND is not set
 
 #
@@ -97,6 +100,10 @@ CONFIG_VUART_FRONTEND=y
 
 # CONFIG_VSENSELED_FRONTEND is not set
 # CONFIG_VSENSEJ_FRONTEND is not set
+# CONFIG_VENOCEAN_FRONTEND is not set
+# CONFIG_VWAGOLED_FRONTEND is not set
+# CONFIG_VKNX_FRONTEND is not set
+CONFIG_VVALVE_FRONTEND=y
 # end of SOO Mobile Entity frontend drivers
 # end of SOO Mobile Entity - Smart Object Oriented subsystem
 
