add new driver valve and modif ME heat

--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -116,6 +116,11 @@
 				compatible = "vknx,frontend";
 				status = "disabled";
 			};
+
+			vvalve {
+				compatible = "vvalve,frontend";
+				status = "disabled";
+			};
 		};
 
 	};
