--- a/ME/base/so3/soo/me/Makefile
+++ b/ME/base/so3/soo/me/Makefile
@@ -11,7 +11,7 @@ obj-$(CONFIG_SOO_CHAT) += chat/
 obj-$(CONFIG_SOO_WAGOLED) += wagoled/
 obj-$(CONFIG_SOO_SWITCH_ENOCEAN) += switch/
 obj-$(CONFIG_SOO_SWITCH_KNX) += switch/
-
+obj-$(CONFIG_SOO_HEAT) += heat/
 
 
 
