--- a/agency/linux/arch/arm64/boot/dts/soo.dtsi
+++ b/agency/linux/arch/arm64/boot/dts/soo.dtsi
@@ -58,6 +58,11 @@
 				compatible = "vknx,backend";
 				status = "disabled";
 			};
+
+			vvalve {
+				compatible = "vvalve,backend";
+				status = "disabled";
+			};
 		};
 	};
 	
