--- a/ME/base/so3/soo/me/Kconfig
+++ b/ME/base/so3/soo/me/Kconfig
@@ -61,6 +61,9 @@ choice
 	
 	config SOO_SWITCH_ENOCEAN
 		bool "SOO.switch Mobile Entity using enocean"
-		
+	
+	config SOO_HEAT
+		bool "SOO.heat Mobile Entity"
+
 endchoice
 
