--- a/agency/linux/soo/drivers/Makefile
+++ b/agency/linux/soo/drivers/Makefile
@@ -21,3 +21,4 @@ obj-$(CONFIG_TCM515) += serial/tcm515/
 obj-$(CONFIG_RN2483) += serial/rn2483/
 obj-$(CONFIG_KBERRY838) += serial/kberry838/
 obj-$(CONFIG_VKNX_BACKEND) += vknxback/
+obj-$(CONFIG_VVALVE_BACKEND) += vvalveback/
