modif driver FE temp and valve

--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -121,6 +121,11 @@
 				compatible = "vvalve,frontend";
 				status = "disabled";
 			};
+
+			vtemp {
+				compatible = "vtemp,frontend";
+				status = "disabled";
+			};
 		};
 
 	};
