--- a/ME/base/so3/soo/drivers/Kconfig
+++ b/ME/base/so3/soo/drivers/Kconfig
@@ -48,5 +48,8 @@ config VKNX_FRONTEND
 config VVALVE_FRONTEND
     bool "vvalve frontend"
 
+config VTEMP_FRONTEND
+    bool "vtemp frontend"    
+
 endmenu
 
