--- a/agency/linux/arch/arm64/boot/dts/soo.dtsi
+++ b/agency/linux/arch/arm64/boot/dts/soo.dtsi
@@ -63,6 +63,11 @@
 				compatible = "vvalve,backend";
 				status = "disabled";
 			};
+
+			vtemp {
+				compatible = "vtemp,backend";
+				status = "disabled";
+			};
 		};
 	};
 	
