--- a/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
+++ b/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-rpi-4-b.dts
@@ -501,7 +501,7 @@
 	};
 
 	hts221-humid@5f {
-		compatible = "st,hts221-humid";
+		compatible = "st,hts221";
 		reg = <0x5f>;
 		status = "okay";
 	};
