--- a/ME/base/so3/soo/drivers/Makefile
+++ b/ME/base/so3/soo/drivers/Makefile
@@ -11,4 +11,4 @@ obj-$(CONFIG_VENOCEAN_FRONTEND) += venoceanfront/
 obj-$(CONFIG_VWAGOLED_FRONTEND) += vwagoledfront/
 obj-$(CONFIG_VKNX_FRONTEND) += vknxfront/
 obj-$(CONFIG_VVALVE_FRONTEND) += vvalvefront/
-obj-$(CONFIG_VVALVE_FRONTEND) += vtempfront/
+obj-$(CONFIG_VTEMP_FRONTEND) += vtempfront/
