--- a/agency/linux/arch/arm64/configs/cm4_64_defconfig
+++ b/agency/linux/arch/arm64/configs/cm4_64_defconfig
@@ -4870,14 +4870,15 @@ CONFIG_VUIHANDLER_BACKEND=y
 # CONFIG_VLEDS_BACKEND is not set
 # CONFIG_VFB_BACKEND is not set
 # CONFIG_VNET_BACKEND is not set
-CONFIG_VSENSELED_BACKEND=y
-CONFIG_VSENSEJ_BACKEND=y
+# CONFIG_VSENSELED_BACKEND is not set
+# CONFIG_VSENSEJ_BACKEND is not set
 CONFIG_VWAGOLED_BACKEND=y
 CONFIG_TCM515=y
 CONFIG_VENOCEAN_BACKEND=y
-CONFIG_RN2483=y
+# CONFIG_RN2483 is not set
 CONFIG_KBERRY838=y
 CONFIG_VKNX_BACKEND=y
+CONFIG_MIPOT32001353=y
 
 #
 # vnet backend config
