--- a/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-cm4.dts
+++ b/agency/linux/arch/arm64/boot/dts/broadcom/bcm2711-cm4.dts
@@ -367,6 +367,29 @@
 	status = "okay";
 };
 
+&genet {
+	phy-handle = <&phy1>;
+	phy-mode = "rgmii-rxid";
+	status = "okay";
+};
+
+#if 0
+&genet_mdio {
+	phy1: ethernet-phy@1 {
+		/* No PHY interrupt */
+		reg = <0x1>;
+	};
+};
+#else
+/** SOO.tech **/
+&genet_mdio {
+	phy1: ethernet-phy@0 {
+		/* No PHY interrupt */
+		reg = <0x0>;
+	};
+};
+#endif
+
 /* uart0 communicates with the BT module */
 &uart0 {
 	pinctrl-names = "default";
