--- a/buildroot/package/Config.in
+++ b/buildroot/package/Config.in
@@ -1205,6 +1205,7 @@ menu "External python modules"
 	source "package/python-rpi-gpio/Config.in"
 	source "package/python-rpi-ws281x/Config.in"
 	source "package/python-rsa/Config.in"
+	source "package/python-rtimulib/Config.in"
 	source "package/python-rtslib-fb/Config.in"
 	source "package/python-s3transfer/Config.in"
 	source "package/python-scandir/Config.in"
@@ -1214,6 +1215,8 @@ menu "External python modules"
 	source "package/python-secretstorage/Config.in"
 	source "package/python-see/Config.in"
 	source "package/python-semver/Config.in"
+	source "package/python-sense-hat/Config.in"
+	source "package/python-sense-emu/Config.in"
 	source "package/python-sentry-sdk/Config.in"
 	source "package/python-serial/Config.in"
 	source "package/python-serial-asyncio/Config.in"
@@ -1634,6 +1637,7 @@ menu "Hardware handling"
 	source "package/tslib/Config.in"
 	source "package/uhd/Config.in"
 	source "package/urg/Config.in"
+	source "package/wiringpi/Config.in"
 endmenu
 
 menu "Javascript"
@@ -1681,6 +1685,7 @@ menu "JSON/XML"
 	source "package/benejson/Config.in"
 	source "package/cjson/Config.in"
 	source "package/expat/Config.in"
+	source "package/ezxml/Config.in"
 	source "package/jansson/Config.in"
 	source "package/jose/Config.in"
 	source "package/jsmn/Config.in"
@@ -2233,6 +2238,7 @@ endif
 	source "package/iperf/Config.in"
 	source "package/iperf3/Config.in"
 	source "package/iproute2/Config.in"
+	source "package/ipsec-tools/Config.in"
 	source "package/ipset/Config.in"
 	source "package/iptables/Config.in"
 	source "package/iptraf-ng/Config.in"
@@ -2470,6 +2476,10 @@ comment "Utilities"
 	source "package/apg/Config.in"
 	source "package/at/Config.in"
 	source "package/bash-completion/Config.in"
+	
+	# SOO.tech
+	source "package/auto-getty/Config.in"
+
 	source "package/ccrypt/Config.in"
 	source "package/crudini/Config.in"
 	source "package/dialog/Config.in"
