--- a/agency/rootfs/configs/cm4_64_defconfig
+++ b/agency/rootfs/configs/cm4_64_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -g61ead4a848-dirty Configuration
+# Buildroot -g8afbb165f1-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -8,7 +8,6 @@ BR2_HOST_GCC_AT_LEAST_5=y
 BR2_HOST_GCC_AT_LEAST_6=y
 BR2_HOST_GCC_AT_LEAST_7=y
 BR2_HOST_GCC_AT_LEAST_8=y
-BR2_HOST_GCC_AT_LEAST_9=y
 
 #
 # Target options
@@ -430,10 +429,10 @@ BR2_GENERATE_LOCALE=""
 # BR2_SYSTEM_ENABLE_NLS is not set
 # BR2_TARGET_TZ_INFO is not set
 BR2_ROOTFS_USERS_TABLES=""
-BR2_ROOTFS_OVERLAY="$(BASE_DIR)/board/common/rootfs_overlay/ $(BASE_DIR)/board/rpi4_64/rootfs_overlay/"
+BR2_ROOTFS_OVERLAY="$(BASE_DIR)/board/common/rootfs_overlay/ $(BASE_DIR)/board/cm4_64/rootfs_overlay/"
 BR2_ROOTFS_POST_BUILD_SCRIPT="${BASE_DIR}/board/common/post_build.sh"
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BASE_DIR)/board/rpi4_64/post_image.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BASE_DIR)/board/cm4_64/post_image.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS=""
 
 #
