--- a/agency/avz/arch/arm32/Makefile
+++ b/agency/avz/arch/arm32/Makefile
@@ -1,5 +1,5 @@
-
 obj-y += head.o hyp-stub.o
+
 obj-y += setup.o exception.o fault.o hypercalls.o context.o domain.o
 obj-y += cache_v7_asm.o cache_v7.o cache-cp15.o
 obj-y += mmu.o
@@ -9,7 +9,7 @@ obj-y += migration.o
 
 obj-y += lib/
 
-obj-$(CONFIG_PSCI) += smccc-call.o
+#obj-$(CONFIG_PSCI) += smccc-call.o
 
 obj-y += $(TARGET)/
 
