--- a/agency/avz/mm/Kconfig
+++ b/agency/avz/mm/Kconfig
@@ -1,7 +1,11 @@
 
 config HYPERVISOR_VADDR
 	hex "Virtual base address of the hypervisor"
-
+	default 0xff000000 if ARM32
+	default 0xffff700000000000 if ARM64 
+	default 0x100000000000 if ARM64VT
+	
 config HYPERVISOR_SIZE
 	hex "Size of hypervisor"
 	default 0xc0000000
+	
