[rootfs] Update virt64 defconfig - error with kernel headers

--- a/agency/rootfs/configs/virt64_defconfig
+++ b/agency/rootfs/configs/virt64_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gb253d296ad-dirty Configuration
+# Buildroot -g228ca4121a-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -215,12 +215,12 @@ BR2_TOOLCHAIN_EXTERNAL_PATH=""
 BR2_TOOLCHAIN_EXTERNAL_GLIBC=y
 BR2_PACKAGE_HAS_TOOLCHAIN_EXTERNAL=y
 BR2_PACKAGE_PROVIDES_TOOLCHAIN_EXTERNAL="toolchain-external-custom"
-BR2_TOOLCHAIN_EXTERNAL_PREFIX="aarch64-linux-gnu"
+BR2_TOOLCHAIN_EXTERNAL_PREFIX="aarch64-none-linux-gnu"
 BR2_TOOLCHAIN_EXTERNAL_BOOTLIN_ARCH_SUPPORTS=y
-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="aarch64-linux-gnu"
-# BR2_TOOLCHAIN_EXTERNAL_GCC_10 is not set
+BR2_TOOLCHAIN_EXTERNAL_CUSTOM_PREFIX="aarch64-none-linux-gnu"
+BR2_TOOLCHAIN_EXTERNAL_GCC_10=y
 # BR2_TOOLCHAIN_EXTERNAL_GCC_9 is not set
-BR2_TOOLCHAIN_EXTERNAL_GCC_8=y
+# BR2_TOOLCHAIN_EXTERNAL_GCC_8 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_7 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_6 is not set
 # BR2_TOOLCHAIN_EXTERNAL_GCC_5 is not set
@@ -243,8 +243,8 @@ BR2_TOOLCHAIN_EXTERNAL_GCC_8=y
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_2 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_1 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_5_0 is not set
-# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_20 is not set
-BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_19=y
+BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_20=y
+# BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_19 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_18 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_17 is not set
 # BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_16 is not set
@@ -366,7 +366,8 @@ BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_16=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_17=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_18=y
 BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_19=y
-BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.19"
+BR2_TOOLCHAIN_HEADERS_AT_LEAST_4_20=y
+BR2_TOOLCHAIN_HEADERS_AT_LEAST="4.20"
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_3=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_4=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_4_5=y
@@ -378,7 +379,9 @@ BR2_TOOLCHAIN_GCC_AT_LEAST_5=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_6=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_7=y
 BR2_TOOLCHAIN_GCC_AT_LEAST_8=y
-BR2_TOOLCHAIN_GCC_AT_LEAST="8"
+BR2_TOOLCHAIN_GCC_AT_LEAST_9=y
+BR2_TOOLCHAIN_GCC_AT_LEAST_10=y
+BR2_TOOLCHAIN_GCC_AT_LEAST="10"
 BR2_TOOLCHAIN_HAS_MNAN_OPTION=y
 BR2_TOOLCHAIN_HAS_SYNC_1=y
 BR2_TOOLCHAIN_HAS_SYNC_2=y
