--- a/agency/rootfs/configs/rpi4_64_defconfig
+++ b/agency/rootfs/configs/rpi4_64_defconfig
@@ -2536,6 +2536,8 @@ BR2_PACKAGE_BLUEZ_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS=y
 # BR2_PACKAGE_BLUEZ5_UTILS_OBEX is not set
 BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
+# BR2_PACKAGE_BLUEZ5_UTILS_MONITOR is not set
+BR2_PACKAGE_BLUEZ5_UTILS_TOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS_DEPRECATED=y
 # BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL is not set
 # BR2_PACKAGE_BLUEZ5_UTILS_PLUGINS_HEALTH is not set
