--- a/agency/usr/CMakeLists.txt
+++ b/agency/usr/CMakeLists.txt
@@ -23,7 +23,7 @@ set(CMAKE_C_FLAGS_RELEASE "-Wall -Wstrict-prototypes -O2 -fomit-frame-pointer -s
 add_subdirectory(core)
 add_subdirectory(dcm)
 add_subdirectory(frozen)
-
+add_subdirectory(mqtt_iuoc)
 add_subdirectory(apps)
 add_subdirectory(lib)
 
