not stable commit - saving BE/FE for iuoc

--- a/ME/base/so3/dts/so3virt.dtsi
+++ b/ME/base/so3/dts/so3virt.dtsi
@@ -107,6 +107,12 @@
 				status = "disabled";
 			};
 
+
+			viuoc {
+				compatible = "viuoc,frontend";
+				status = "disabled";
+			};
+			
 			venocean {
 				compatible = "venocean,frontend";
 				status = "disabled";
