--- a/agency/linux/arch/arm64/boot/dts/soo.dtsi
+++ b/agency/linux/arch/arm64/boot/dts/soo.dtsi
@@ -48,6 +48,11 @@
 				compatible = "vwagoled,backend";
 				status = "disabled";
 			};
+			
+			viuoc {
+				compatible = "viuoc,backend";
+				status = "disabled";
+			};
 
 			venocean {
 				compatible = "venocean,backend";
