--- a/agency/linux/soo/drivers/Kconfig
+++ b/agency/linux/soo/drivers/Kconfig
@@ -76,6 +76,12 @@ config VWAGOLED_BACKEND
 	default n
 	help
 	  The vwagoled driver allows to changes the status of the wago leds 
+	  
+config VIUOC_BACKEND
+	bool "viuoc backend"
+	default n
+	help
+	  The viuoc drivers allow to exchange information with IUOC server
 
 config TCM515
 	bool "Support tmc515 uart communication from kernel to provide EnOcean support"
